Implemented searchAllRecurringDonations()